--- a/src/Pages/StudentDetails/StudentMainDetails/StudentFormEvent/StudentForm/index.module.css
+++ b/src/Pages/StudentDetails/StudentMainDetails/StudentFormEvent/StudentForm/index.module.css
@@ -1,11 +1,14 @@
 .StudentDetails {
-  width: 90%;
-  margin: auto;
-  box-sizing: border-box;
+  width: 700px;
+  max-width: 89%;
+  background-color: #ffffff;
   padding: 1em;
-  height: 100vh;
-  overflow: scroll;
-  background-color: #fff;
+  margin: 30px auto 30px auto;
+  border-radius: 7px;
+  box-shadow: 0 0.4px 4px #76848d;
+}
+.StudentDetails:hover {
+  box-shadow: 0 0.4px 10px #76848d;
 }
 
 .MainForm{
@@ -31,7 +34,7 @@
   box-sizing: border-box;
   display: block;
   width: 100%;
-  padding: 0.7em 0 0.7em 1.2em;
+  padding: 0.3em 0 0.3em 0.7em;
   border: 1px solid #198dfb;
   margin-top: 0.2em;
   background-color: #fff;
@@ -44,7 +47,7 @@
 
 .label {
   display: block;
-  font-size: 13px;
+  font-size: 11.7px;
   font-family: inherit;
   color: #454f51;
   margin-top: 10px;
